# scgft-evaluator

./: LICENSE  README.md  Readme.md  Readme_ES.md  pyproject.toml
src/scgft_evaluator/: __init__.py  evaluator.py
